--- a/css/AddressBookForm.css
+++ b/css/AddressBookForm.css
@@ -130,3 +130,89 @@ img {
     opacity: 1;
     margin-left: auto;
 }
+/* UC-3 */
+.form{
+    min-height: calc(100% - 80px);
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form1{
+    width: 50%;
+    padding: 15px 60px;
+    background: white 0% 0% no-repeat;
+    opacity: 1;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 4px;
+    align-items: center;
+}
+
+.row-content{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.label-text{        
+    text-align: left;
+    font: normal normal normal 14px/18px Roboto;
+    letter-spacing: 0px;
+    color: #42515F;
+    opacity: 1;
+    text-transform: capitalize;
+}
+
+label{
+    padding: 12px 12px 7px 0;
+    display: inline-block;
+}
+
+.input{
+    width: 100%;
+    padding: 8px;
+    resize: vertical;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #BDBDBD;
+    border-radius: 3px;
+    opacity: 1;
+}
+
+.input-address{
+    width: 100%;
+    padding: 8px;
+    height: 70px;
+    resize: vertical;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #BDBDBD;
+    border-radius: 3px;
+    opacity: 1;
+}
+
+.row-content-select{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.place{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    /* row-gap: 10em; */
+}
+
+select{
+    width: 150px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    background: #F7F7F7 0% 0% no-repeat padding-box;
+    opacity: 1;
+    font: normal normal 14px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color: transparent ;
+}
