Added: add code for form validation

--- a/css/AddressBookForm.css
+++ b/css/AddressBookForm.css
@@ -216,3 +216,9 @@ select{
     color: #42515f;
     background-color: transparent ;
 }
+/* UC-4 */
+error-output{
+    font-family: Roboto;
+    font-size: 12px;
+    color: red;
+}
